--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,21 +23,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.1
-  get: ^3.2.2
-  flutter_bloc: ^5.0.1
   cupertino_icons: ^0.1.3
+  flutter_bloc: ^5.0.1
+  flutter_rating_bar: ^3.0.1+1
+  get: ^3.2.2
   get_it: ^5.0.1
-  json_annotation: ^2.0.0
+  http: ^0.12.1
   image_picker: ^0.6.6+5
-
+  json_annotation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.0.0
   json_serializable: ^2.0.0
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -76,4 +75,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
