--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   hive: ^1.4.4+1
   http: ^0.12.1
   image_picker: ^0.6.6+5
-  json_annotation: ^2.0.0
+  json_annotation: 
   path_provider: ^1.6.18
 
 dev_dependencies:
